[package]
name = "stormbreaker"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.9", features = ["std", "derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0"
chrono = "0.4.38"
sqlx = { version = "0.7", features = [ "runtime-tokio", "mysql" ] }
tokio = { version = "=1.38.0", features = ["full"] }
tokio-macros = { version = "2.3.0"}